...
    agendaViewController?.tabBarItem.image = .fos_systemImage(withName: "calendar")
  }

  func addMap(_ mapViewControllable: ViewControllable) {
    mapViewController = mapViewControllable.uiviewController
    mapViewController?.title = L10n.Map.title
    mapViewController?.tabBarItem.accessibilityIdentifier = "map"
    mapViewController?.tabBarItem.image = .fos_systemImage(withName: "map")
  }

  func addMore(_ mapViewControllable: ViewControllable) {
    moreViewController = mapViewControllable.uiviewController
    moreViewController?.title = L10n.More.title
...
